added all file updates to github

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <h3>Click the links to find recipes for the perfect dinner party</h3>
-        <ol>
-            <li><a href="salad.html">Asparagus & Mint Salad</a></li><img src="Salad.jpeg" height="50" width="50">
-            <li><a href="rolls.html">Dinner rolls</a></li><img src="rolls.jpeg" height="50" width="50">
-            <li><a href="lamb.html">Herb Crusted Lamb Chops</a></li><img src="lamb.jpg" height="50" width="50">
-            <li><a href="gnocci.html">Gnocchi</a></li><img src="gnocchi.jpg" height="50" width="50">
-        </ol>
+        <div class="main">
+            <ol>
+                <li><a href="salad.html">Asparagus & Mint Salad</a></li><img src="Salad.jpeg" height="50" width="50">
+                <li><a href="rolls.html">Dinner rolls</a></li><img src="rolls.jpeg" height="50" width="50">
+                <li><a href="lamb.html">Herb Crusted Lamb Chops</a></li><img src="lamb.jpg" height="50" width="50">
+                <li><a href="gnocci.html">Gnocchi</a></li><img src="gnocchi.jpg" height="50" width="50">
+            </ol>
+        </div>
     </body>
